<resources>
    <string name="app_name">Truck-App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_bookings">My Bookings</string>
    <string name="menu_rate_chart">Rate Chart</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_rate_us">Rate us</string>
    <string name="menu_about">About</string>

    <!--Home Page-->
    <string name="home_pickup_from">Pickup from</string>
    <string name="home_location">Select a Location</string>
    <string name="home_drop_at">Drop at</string>
    <string name="home_book_for_now">Book for now</string>
    <string name="home_book_for_later">Book for later</string>

    <!--Login Signup Page-->
    <string name="signup_already_registered">Already Registered?\u0020</string>
    <string name="signup_open_login"><u>Login</u></string>
    <string name="login_no_account">Don\'t have an Account?\u0020</string>
    <string name="login_open_signup"><u>Sign Up</u></string>
    <string name="login_forgot_password"><u>Forgot Password</u>\?</string>
    <string name="login_caps">LOGIN</string>
    <string name="signup_caps">SIGN UP</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
</resources>