<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_bookings"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/menu_my_bookings" />
        <item
            android:id="@+id/nav_rate_chart"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_rate_chart"/>
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_rate_review_black_24dp"
            android:title="@string/menu_rate_us" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about" />

    </group>
</menu>
