<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/highway_login_signup" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@color/login_signup_dark_background"
        android:scaleType="fitXY" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/login_signup_logo_dimen"
                android:layout_height="@dimen/login_signup_logo_dimen"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_big"
                android:src="@drawable/placeholder_logo" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_big"
                android:gravity="center"
                android:text="@string/login_caps"
                android:textColor="@color/white"
                android:textSize="@dimen/login_signup_header_textsize" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/login_signup_edittext_background"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/login_signup_edittext_background"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_default"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_medium"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium"
                android:text="@string/login_caps"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/button_corner_radius_default" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_big"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_no_account"
                    android:textColor="@color/login_signup_details_textcolor" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/open_signup_from_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_open_signup"
                    android:textColor="@color/white" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forgot_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_big"
                android:text="@string/login_forgot_password"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>