<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/data_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:orientation="vertical"
        tools:context=".Home.HomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/zero_dimen"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/pickup_location_color" />

                <View
                    android:layout_width="@dimen/home_pickup_drop_line_width"
                    android:layout_height="@dimen/home_pickup_drop_line_height"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/black" />
            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/zero_dimen"
                android:layout_height="@dimen/home_pickup_drop_cardview_height"
                android:layout_margin="@dimen/home_pickup_drop_cardview_margin"
                android:layout_weight="15">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_small">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_pickup_from"
                        android:textSize="@dimen/home_pickup_drop_header_textsize" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_location"
                        android:id="@+id/pick_up_from"
                        android:textColor="@color/black"
                        android:textSize="@dimen/home_pickup_drop_location_textsize" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/zero_dimen"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <View
                    android:layout_width="@dimen/home_pickup_drop_line_width"
                    android:layout_height="@dimen/home_pickup_drop_line_height"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/black" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/drop_location_color" />

            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/zero_dimen"
                android:layout_height="@dimen/home_pickup_drop_cardview_height"
                android:layout_margin="@dimen/home_pickup_drop_cardview_margin"
                android:layout_weight="15">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_small">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_drop_at"
                        android:textSize="@dimen/home_pickup_drop_header_textsize" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_location"
                        android:textColor="@color/black"
                        android:textSize="@dimen/home_pickup_drop_location_textsize" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/select_choice"
        android:layout_below="@id/data_entry">

        <com.google.android.gms.maps.MapView
            android:id="@+id/show_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/select_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="@dimen/button_height_default"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/home_button_margin"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/home_book_for_now"
            app:cornerRadius="@dimen/button_corner_radius_default" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="@dimen/button_height_default"
            android:layout_marginStart="@dimen/home_button_margin"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/home_book_for_later"
            app:cornerRadius="@dimen/button_corner_radius_default" />
    </LinearLayout>
</RelativeLayout>